Preliminary changes for SCAP integration

--- a/src/Common/config.ini
+++ b/src/Common/config.ini
@@ -1,8 +1,12 @@
-; All Entries are space sensitive. Further versions will fix input validation.
+; All Entries are space sensitive. Future versions will fix input validation.
 
 [general]
 CKLOutPath=C:\Temp\CKLTest\
-LogPath=C:\Temp\PowerStigDSC\
+LogPath=C:\Temp\PowerStig\
+
+[SCAP]
+ScapInstallDir="C:\Program Files\SCAP Compliance Checker 5.1\"
+ScapProfile="MAC-3_Sensitive"
 
 [database]
 SQLInstanceName=ServerName\InstanceName
