--- a/src/Common/config.ini
+++ b/src/Common/config.ini
@@ -1,8 +1,11 @@
 ; All Entries are space sensitive. Future versions will fix input validation.
+; Concurrent scan option is only used here if you are running a standalone function
+;   else it falls back to SQL configuration
 
 [general]
 CKLOutPath=C:\Temp\CKLTest\
 LogPath=C:\Temp\PowerStig\
+ConcurrentScans=5
 
 [SCAP]
 ScapInstallDir="C:\Program Files\SCAP Compliance Checker 5.1\"
