Fixed issues with SCAP options file, SCAP sql imp

--- a/src/Common/config.ini
+++ b/src/Common/config.ini
@@ -8,8 +8,8 @@ LogPath=C:\Temp\PowerStig\
 ConcurrentScans=5
 
 [SCAP]
-ScapInstallDir="C:\Program Files\SCAP Compliance Checker 5.1\"
-ScapProfile="MAC-3_Sensitive"
+ScapInstallDir=C:\Program Files\SCAP Compliance Checker 5.1\
+ScapProfile=MAC-3_Sensitive
 
 [database]
 SQLInstanceName=ServerName\InstanceName
