CKL Generation Based on PowerStig 3.1.0

--- a/src/Common/config.ini
+++ b/src/Common/config.ini
@@ -3,7 +3,7 @@
 ;   else it falls back to SQL configuration
 
 [general]
-CKLOutPath=C:\Temp\CKLTest\
+CKLOutPath=C:\Temp\PowerStig\CKL\
 LogPath=C:\Temp\PowerStig\
 ConcurrentScans=5
 
