Addition of IIS Scanning

--- a/src/Common/config.ini
+++ b/src/Common/config.ini
@@ -6,6 +6,8 @@
 CKLOutPath=C:\Temp\PowerStig\CKL\
 LogPath=C:\Temp\PowerStig\
 ConcurrentScans=5
+PowerStigVersion=3.2.0
+PowerStigScanVersion=2.1.0.0
 
 [SCAP]
 ScapInstallDir=C:\Program Files\SCAP Compliance Checker 5.1\
